feat: Input data and fix vast AI setup

--- a/ingestion-worker/Dockerfile
+++ b/ingestion-worker/Dockerfile
@@ -5,6 +5,7 @@ ENV PYTHONUNBUFFERED=1 \
     DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential gcc g++ make \
     libpq5 ca-certificates \
     tesseract-ocr poppler-utils libmagic1 \
     libglib2.0-0 libsm6 libxext6 libxrender-dev libgomp1 libgl1-mesa-glx \
